--- a/build_your_own_embedding/index.html
+++ b/build_your_own_embedding/index.html
@@ -7,7 +7,10 @@
   <title>Build Your Own Embedding documentation &mdash; Build Your Own Embedding 0.1 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=80d5e7a1" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
-
+      <script
+  src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+  crossorigin="anonymous"></script>
   
   <!--[if lt IE 9]>
     <script src="_static/js/html5shiv.min.js"></script>
